force-app/main/default/objects/Transplant_Patient__c/Transplant_Patient__c.object-meta.xml
<CustomObject>
    <label>Transplant Patient</label>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transplant Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>