force-app/main/default/objects/Transplant_Patient__c/fields/MRN__c.field-meta.xml
<CustomField>
    <fullName>MRN__c</fullName>
    <label>Medical Record Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>