force-app/main/default/objects/Transplant_Patient__c/fields/Organ_Type__c.field-meta.xml
<CustomField>
    <fullName>Organ_Type__c</fullName>
    <label>Organ Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kidney</fullName>
            </value>
            <value>
                <fullName>Liver</fullName>
            </value>
            <value>
                <fullName>Heart</fullName>
            </value>
            <value>
                <fullName>Lung</fullName>
            </value>
            <value>
                <fullName>Pancreas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>